syntax = "proto3";
package protoqol.protoqol;

import "protoqol/protoqol/post.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "protoqol/x/protoqol/types";

// Msg defines the Msg service.
service Msg {
    rpc CreatePost(MsgCreatePost) returns (MsgCreatePostResponse);
  rpc UpdatePost(MsgUpdatePost) returns (MsgUpdatePostResponse);
  rpc DeletePost(MsgDeletePost) returns (MsgDeletePostResponse);
  rpc WriteComment(MsgWriteComment) returns (MsgWriteCommentResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePost {
  string creator = 1;
  string title = 2;
  string body = 3;
}

message MsgCreatePostResponse {
  uint64 id = 1;
}

message MsgUpdatePost {
  string creator = 1;
  uint64 id = 2;
  string title = 3;
  string body = 4;
}

message MsgUpdatePostResponse {}

message MsgDeletePost {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeletePostResponse {}

message MsgWriteComment {
  string creator = 1;
}

message MsgWriteCommentResponse {
}

// this line is used by starport scaffolding # proto/tx/message
